update project and bump version